--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "chalk": "4",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
-    "eslint": "^8.57.0",
     "express": "^4.19.2",
     "sequelizer": "^1.1.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.4",
+    "eslint": "^8.57.0"
   }
 }
