--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "lint": "yarn run eslint --fix ."
+    "lint": "yarn run eslint --fix .",
+    "start": "node src/index.js"
   },
   "dependencies": {
     "chalk": "4",
